--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.3",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.2.1",
+    "concurrently": "^9.2.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2"
