--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "multer": "^2.0.2",
     "winston": "^3.17.0",
     "zod": "^4.0.17"
   },
@@ -27,6 +29,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.2.1",
     "concurrently": "^9.2.0",
     "nodemon": "^3.1.10",
