--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
+    "6pp": "^1.3.10",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
+    "moment": "^2.30.1",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
@@ -23,6 +26,7 @@
     "react-router-dom": "^7.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
