--- a/server/.env.example
+++ b/server/.env.example
@@ -2,10 +2,8 @@ CLIENT_URL=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
-ACCESS_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
-ACCESS_TOKEN_EXPIRY=
-REFRESH_TOKEN_EXPIRY=
+USER_TOKEN_SECRET=
+USER_TOKEN_EXPIRY=
 MONGO_URI=
 NODE_ENV=
 PORT=
