Admin Token secret Added

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,9 @@ CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
 USER_TOKEN_SECRET=
 USER_TOKEN_EXPIRY=
+ADMIN_TOKEN_SECRET=
+ADMIN_TOKEN_EXPIRY=
+ADMIN_SECRET_KEY=
 MONGO_URI=
 NODE_ENV=
 PORT=
