--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
+    "express": "^5.1.0",
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
     "motion": "^12.23.12",
